<resources>
    <string name="app_name">ToyGitHubClient</string>

    <!-- For Preview -->
    <string name="preview_repo_name" translatable="false">kitze / sizzy</string>
    <string name="preview_repo_description" translatable="false">A tool for developing responsive websites crazy-fas</string>
    <string name="preview_language" translatable="false">JavaScript</string>
    <string name="preview_star_count" translatable="false">1275</string>
    <string name="preview_fork_count" translatable="false">20</string>
    <string name="preview_star_time_interval" translatable="false">1,162 stars today</string>

    <!-- Content Description -->
    <string name="content_des_github_icon">GitHub Icon</string>
    <string name="content_des_star_icon">Star Icon</string>
    <string name="content_des_source_fork_icon">Source Fork Icon</string>
    <string name="content_des_language_icon">Programming Language Icon</string>
    <string name="content_des_avatar_icon">%1$s$ Avatar Icon</string>

    <!-- Titles -->
    <string name="title_trending">Trending</string>
    <string name="title_login">Login</string>

    <!-- Tabs Title -->
    <string name="title_tab_dashboard">DashBoard</string>
    <string name="title_tab_repos">Repos</string>

    <string name="title_tab_today">Today</string>
    <string name="title_tab_this_week">This Week</string>
    <string name="title_tab_this_month">This Month</string>

    <!-- Actions -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_login">Log In</string>

    <string name="action_star">Star</string>

    <!-- Hints -->
    <string name="hint_username">Username or Email</string>
    <string name="hint_password">Password</string>

    <!-- Other -->
    <string name="built_by">Built By: </string>
    <string name="unknown">Unknown</string>

</resources>
